packages/kit/test/apps/basics/src/routes/load/invalidation/params/+layout.js
/** @type {import('./$types').LayoutLoad} */
export function load({ params }) {
	return {
		a: params.a,
		b: params.b
	};
}
